Update to try to resolve layout issues on mobile.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,9 +17,9 @@ body{
 
 #logo{
 	position: absolute;
-	width: 50%;
+	width: 70%;
 	top: 25%;
-	left: 25%;
+	left: 17%;
 	z-index: 1;
 
 }
@@ -128,8 +128,15 @@ footer img{
 
 @media screen and (max-width: 768px) {
 
+#home img{
+	height: 100%;
+	width:auto;
+}
+
 #logo{
-	top: 12%;
+	width: 100%;
+	left: 0;
+	top:12%;
 }    
 
 
@@ -163,7 +170,8 @@ footer img{
 @media screen and (max-width: 480px) {
 
 #logo{
-	top: 7%;
+	width: 100%;
+	left: 0;
 }
 
 #arrow img{
@@ -171,14 +179,15 @@ footer img{
 }
 
 .wrapper{
-	width: 80%;
+	width: 100%;
 }
 
 .left-column img{
-	width: 50%;
-	margin-left: 30px;
+	margin-left: 15%;
+	margin-right: 15%;
 }
  .left-column{
+
  	clear: both;
  	display: block;
  	width:80%;
@@ -196,12 +205,23 @@ footer img{
 
  .right-column img{
  	width: 90%;
- 	padding-left: 12%;
+	margin-left: 15%;
+	margin-right: 15%;
+
  }
+
+
+#home img{
+	height: 100%;
+	width:auto;
+}
 
  p{
  	width: 100%;
- 	margin-left: 6%;
+	margin-left: 10%;
+	margin-right: 10%;
+
+}
 
  }
 }
